se agrega authorizacion a swagger, exclusiones en rutas segurizadas y roles en controller
